@@ -1,5 +1,7 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* teams.py: Import into CVS.
+
 	* gnome-modules.xml: Added glib, deskbar-applet.
 	* releases.xml.in: Updated.
 
